kubernetes/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app-v1
  template:
    metadata:
      labels:
        app: spring-app-v1
    spec:
      containers:
        - name: spring
          image: imajeetyadav/spring-kubernetes:amd
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: "200Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
