kubernetes/pods.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring
          image: imajeetyadav/spring-kubernetes
          ports:
            - containerPort: 80
          imagePullPolicy: Always
          resources:
            requests:
              memory: "200Mi"
              cpu: "250m"
            limits:
              memory: "250Mi"
              cpu: "500m"
      nodeSelector:
        type: dev
