kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring-app-v1
  ports:
    - port: 80
      targetPort: 8080
  # type: LoadBalancer
  type: NodePort

---
apiVersion: v1
kind: Service
metadata:
  name: spring-service
spec:
  selector:
    app: spring-app-v2
  ports:
    - port: 80
      targetPort: 8081
  # type: LoadBalancer
  type: NodePort
